src/objects/vlocity_ins__AttributeAssignmentRule__c.object
<CustomObject>
    <description>A rule defined to calculate and auto-assign profile attributes to a subject such as an Account or Contact under specified conditions.</description>
    <fields>
        <fullName>vlocity_ins__AttributeCategoryId__c</fullName>
        <description>Formula: parent Attribute&apos;s parent Attribute Category.</description>
        <formula>CASESAFEID(vlocity_ins__AttributeId__r.vlocity_ins__AttributeCategoryId__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Category Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttributeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the Attribute to be applied to the qualifying subjects.</description>
        <label>Vlocity Attribute</label>
        <referenceTo>vlocity_ins__Attribute__c</referenceTo>
        <relationshipLabel>Attribute Assignment Rules</relationshipLabel>
        <relationshipName>AttributeAssignmentRule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this rule is active or not. The rule will only run when IsActive is true.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SObjectTypes__c</fullName>
        <description>A list of Salesforce object types that this Attribute Assignment Rule will run against.</description>
        <label>SObjectTypes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>CustomerInteraction__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Service__c</fullName>
        <description>Identifies the formula used to identify qualifying profile attribute subjects (e.g. qualifying Accounts or Contacts).</description>
        <label>Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <description>The type of Attribute Assignment Rule. Supported Types are:
Field - Field Value will be applied as the Attribute&apos;s Value.
Formula - Result of the Formula will be applied as the Attributes Value. For On-Off Attributes, if formula resolves to &gt;= 1 or true then it will apply the Attribute. By Default all formulas have available all Fields on the SObject being evaluated. See below for further formula info.
Tracking Formula - Same as above except that Tracking Formula&apos;s will be run against all Tracking entries related to the SObject being evaluated.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Formula</fullName>
                </value>
                <value>
                    <fullName>Field</fullName>
                </value>
                <value>
                    <fullName>Tracking Formula</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Vlocity Attribute Assignment Rule</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Attribute Assignment Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>